--- a/assignments/fundamentals/2nd/ControllerAssignment/src/main/res/layout/activity_body.xml
+++ b/assignments/fundamentals/2nd/ControllerAssignment/src/main/res/layout/activity_body.xml
@@ -1,9 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BodyActivity">
+    tools:context="jp.mixi.assignment.controller.adv.BodyFragment">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/BodyLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BodyLabel" />
+    <EditText
+        android:id="@+id/BodyInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BodyLabel"
+        android:gravity="top"
+        android:lines="5"
+        android:inputType="textMultiLine"/>
+
+</RelativeLayout>
