--- a/assignments/fundamentals/2nd/ControllerAssignment/src/main/res/layout/activity_button.xml
+++ b/assignments/fundamentals/2nd/ControllerAssignment/src/main/res/layout/activity_button.xml
@@ -1,9 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ButtonActivity">
+    tools:context="jp.mixi.assignment.controller.adv.ButtonFragment">
 
-</android.support.constraint.ConstraintLayout>
+    <View
+        android:id="@+id/CenterDivider"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/Post"
+        android:background="#393939"/>
+    <Button
+        android:id="@+id/Post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignRight="@id/CenterDivider"
+        android:text="@string/PostLabel"/>
+    <Button
+        android:id="@+id/Discard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignLeft="@id/CenterDivider"
+        android:text="@string/DiscardLabel"/>
+
+</RelativeLayout>
