--- a/assignments/fundamentals/2nd/ControllerAssignment/src/main/res/layout/activity_main2.xml
+++ b/assignments/fundamentals/2nd/ControllerAssignment/src/main/res/layout/activity_main2.xml
@@ -1,9 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="jp.mixi.assignment.controller.Main2Activity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/hello"
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <fragment
+        android:id="@+id/TitleFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/hello"
+        android:name="jp.mixi.assignment.controller.Title_Activity"
+        tools:layout="@layout/activity_title" />
+
+    <fragment
+        android:id="@+id/BodyFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TitleFragment"
+        android:name="jp.mixi.assignment.controller.BodyActivity"
+        tools:layout="@layout/activity_body" />
+
+    <fragment
+        android:id="@+id/ButtonFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BodyFragment"
+        android:name="jp.mixi.assignment.controller.ButtonActivity"
+        tools:layout="@layout/activity_button" />
+
+</RelativeLayout>
