--- a/assignments/fundamentals/3rd/ResourceAssignment/src/main/res/values/colors.xml
+++ b/assignments/fundamentals/3rd/ResourceAssignment/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <!-- 縦画面（port）用 -->
+    <color name="cyan">#00BCD4</color>
+    <color name="indigo">#3F51B5</color>
+    <color name="indigo_light">#C5CAE9</color>
+
+    <!-- 横画面（land）用 -->
+    <color name="yellow">#FFEB3B</color>
+    <color name="orange">#FF9800</color>
+    <color name="orange_light">#FFE0B2</color>
 </resources>
