--- a/practice/fundamentals/3rd/ResourceManagement/app/src/main/res/layout/drawable_practice.xml
+++ b/practice/fundamentals/3rd/ResourceManagement/app/src/main/res/layout/drawable_practice.xml
@@ -12,6 +12,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:background="@drawable/practice"/>
 
 </RelativeLayout>
