--- a/practice/advanced/3rd/IncludePractice/app/src/main/res/layout/activity_main.xml
+++ b/practice/advanced/3rd/IncludePractice/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,10 @@
     <!-- 自由にincludeを使用したレイアウトを作成してください -->
 
     <TextView
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
+    <include layout="@layout/button"/>
 </RelativeLayout>
